Implement JvmOptions class